# MUSICV

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
Little Boy scores debugged/Contreapotheose/: 1968_10_03_58debug.txt  1968_10_04_61debug.txt  1968_10_07_64debug.txt  1968_10_08_66debug.txt  1968_10_08_68debug.txt  1968_10_14_87debug.txt  1968_10_15_119debug.txt  1968_10_16_53debug.txt  1968_10_18_55debug.txt  1968_10_19_71debug.txt  1968_10_21_152debug.txt  1968_10_21_224debug.txt  1968_11_01_90debug.txt  1968_11_14_47debug.txt  1968_11_18_78debug.txt
Little Boy scores debugged/Fanfare_pour_le_triomphe/: 1968_08_05_36debug.txt  1968_08_15_21debug.txt  1968_08_16_18debug.txt  1968_08_17_26debug.txt  1968_08_19_28debug.txt
Little Boy scores debugged/Grosse_Caisse/: 1968_10_30_110debug.txt  1968_10_31_104debug.txt
Little Boy scores debugged/Klaxon_et_sons_de_camera/: 1968_08_03_215debug.txt  1968_08_07_42debug.txt
Little Boy scores debugged/Percussions_et_Cloches/: 1968_11_14_145debug.txt  1968_11_15_P147debug.txt
Little Boy scores debugged/Rafales/: 1968_08_09_113debug.txt  1968_08_09_96debug.txt
music5/: Makefile  music5.sh  pass2.f  pass3.f  readme.text  score  score2  snd.raw
scores/: GEN_issue.txt  MathewsP45to56_VibGliss.txt  W20_003_2_P014.txt  W20_003_2_P018_019.txt  W20_003_2_P023_024.txt  W20_003_2_P026_27.txt  W20_003_2_P030_031.txt  W20_003_2_P033_034.txt  W20_003_2_P042.txt  cat500  fanfarre30_31  fanfarre33_34  fbam1  p59.txt  score1
scores/Contreapotheose/changed_scores/: 58debug_INS2_OK.txt  58debug_INS3_OK.txt  58debug_OK.txt  W20_003_2_P058_059_1convt12_debug.txt
scores/Contreapotheose/debugged_scores/: 1968_10_03_58debug.txt  1968_10_03_85debug.txt  1968_10_03_85debug_tryout.txt  1968_10_04_61debug.txt  1968_10_07_64debug.txt  1968_10_08_66debug.txt  1968_10_08_68debug.txt  1968_10_09_219debuged.txt  1968_10_09_221debug.txt  1968_10_14_117debug.txt  1968_10_14_87debug.txt  1968_10_15_119debug.txt  1968_10_16_53debug.txt  1968_10_18_55debug.txt  1968_10_19_71debug.txt  1968_10_21_152debug.txt  1968_10_21_224debug.txt  1968_10_25_210debug.txt  1968_11_01_90debug.txt  1968_11_14_47debug.txt  1968_11_18_78debug.txt
scores/Contreapotheose/original_scores/: W20_003_2_P047_048.txt  W20_003_2_P047_048_1convt10.txt  W20_003_2_P047_048_annJCR.txt  W20_003_2_P049_050.txt  W20_003_2_P049_050_1convt10.txt  W20_003_2_P049_050_annJCR.txt  W20_003_2_P053.txt  W20_003_2_P053_1convt10.txt  W20_003_2_P053_annJCR.txt  W20_003_2_P055.txt  W20_003_2_P055_1convt10.txt  W20_003_2_P055_annJCR.txt  W20_003_2_P058_059.txt  W20_003_2_P058_059_1convt12.txt  W20_003_2_P058_059_annJCR.txt  W20_003_2_P061_062.txt  W20_003_2_P061_062_1convt13.txt  W20_003_2_P061_062_1convt13_debug.txt  W20_003_2_P061_062_1convt13_debugOKins2.txt  W20_003_2_P061_062_annJCR.txt  W20_003_2_P064_065.txt  W20_003_2_P064_065_1convt13.txt  W20_003_2_P064_065_1convt13_debug.txt  W20_003_2_P064_065_annJCR.txt  W20_003_2_P066_067.txt  W20_003_2_P066_067_1convt13.txt  W20_003_2_P066_067_annJCR.txt  W20_003_2_P068_069.txt  W20_003_2_P068_069_1convt13.txt  W20_003_2_P068_069_annJCR.txt  W20_003_2_P071_072.txt  W20_003_2_P071_072_1convt13.txt  W20_003_2_P071_072_1convt13_debug.txt  W20_003_2_P071_072_annJCR.txt  W20_003_2_P078.txt  W20_003_2_P078_1convt10.txt  W20_003_2_P078_annJCR.txt  W20_003_2_P085_086.txt  W20_003_2_P085_086_1convt15.txt  W20_003_2_P085_086_annJCR.txt  (+28 more)
scores/Fanfare_pour_le_triomphe/: W20_003_2_P023_024_comparewhat is this.txt
scores/Fanfare_pour_le_triomphe/Original_scores/: W20_003_2_P014_annotatedJCR.txt  W20_003_2_P016_017.txt  W20_003_2_P016_017_annJCR.txt  W20_003_2_P018_019.txt  W20_003_2_P018_019_annJCR.txt  W20_003_2_P021.txt  W20_003_2_P021_annJCR.txt  W20_003_2_P023_024.txt  W20_003_2_P023_024_annJCR.txt  W20_003_2_P026_27_annJCR.txt  W20_003_2_P026_27_convt7.txt  W20_003_2_P028_029.txt  W20_003_2_P030_031.txt  W20_003_2_P030_031_annJCR.txt  W20_003_2_P030_031_convt7.txt  W20_003_2_P033_034.txt  W20_003_2_P033_034_annJCR.txt  W20_003_2_P036_38.txt  W20_003_2_P036_38_annJCR.txt  W20_003_2_P043_44.txt  W20_003_2_P043_44_annJCR.txt
scores/Fanfare_pour_le_triomphe/commented_scores/: W20_003_2_P014_analysis.txt  W20_003_2_P016_017_analysis.txt  W20_003_2_P018_019_analysis.txt  W20_003_2_P021_analysis.txt  W20_003_2_P023_024_analysis.txt  W20_003_2_P026_27_analysis.txt  (+8 more)
scores/TestingFolder/: 103debug_tests.txt  124debug_OK.txt  134debug_section3.txt  134debug_testsss.txt  156debug_allSectionsAllGENs.txt  156debug_sections3and4with2ndGEN.txt  160debug_sonsglissement.txt  16_fbam_noclearing.txt  1968_03_10_58debugINS1.txt  1968_08_07_33debug_0_511feedback.txt  1968_10_04_61debug_part1.txt  1968_10_04_61debug_part2.txt  1968_10_04_61debug_part3.txt  1968_11_01_90debug_Part1.txt  1968_11_14_47debugPart1.txt  1968_11_14_47debugPart2.txt  219debuged_tests.txt  33ins_test.txt  43debug_TEST_P8.txt  43ins_test.txt  85_1st_section.txt  85_INS8.txt  GEN4_isssue.txt  GEN5_issue.txt  INSsimple1.txt  RAN_test.txt  RAN_testFM.txt  RingMod_test.txt  W20_003_2_P014_AddedNotes.txt  W20_003_2_P014_GENchanged.txt  W20_003_2_P016_017_ENVchangedTESTS.txt  W20_003_2_P016_017_ENVchangedVUK.txt  W20_003_2_P016_017_GENchanged.txt  W20_003_2_P016_017_noCONVT.txt  W20_003_2_P016_017_oneINSplayAll.txt  W20_003_2_P016_017_oneINSplayAll_noSTR.txt  W20_003_2_P016_017_sine.txt  W20_003_2_P018_019_oneINSplaysAll.txt  W20_003_2_P021_analysisTest_convt6.txt  W20_003_2_P023_024_noINS7to12.txt  (+15 more)
scripts/: music5.sh  release.sh
src/: Makefile  examples.txt  music5.c  pass1.f  pass2.f  pass3.f  raw2wav.c  score  score3  snd.raw
(+155 files in other folders)
